# mine-derien

./: CLAUDE.md  README.md  initial_basic_program.bas  pyproject.toml
train_controller/: main.py
train_controller/control/: gating_rules.py  overdrive.py  pwm_loop.py  scan_loop.py  section_scanner.py  shared_state.py
train_controller/display/: terminal_display.py
train_controller/ports/: ftdi_port.py  port_protocol.py
